force-app/main/default/objects/Lead__c/fields/Business_Development_Executive__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Executive__c</fullName>
    <label>Business Development Executive</label>
    <type>Lookup</type>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
</CustomField>