force-app/main/default/objects/Lead__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <label>Lead Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>