force-app/main/default/objects/Lead__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
    <valueSetDefinition>
        <value>
            <fullName>Referral</fullName>
        </value>
        <value>
            <fullName>Marketing Campaign</fullName>
        </value>
        <value>
            <fullName>Cold Call</fullName>
        </value>
        <value>
            <fullName>Event</fullName>
        </value>
        <value>
            <fullName>Walk-in</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>