force-app/main/default/objects/Lead__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
    <valueSetDefinition>
        <value>
            <fullName>New</fullName>
            <default>true</default>
        </value>
        <value>
            <fullName>Contacted</fullName>
        </value>
        <value>
            <fullName>Interested</fullName>
        </value>
        <value>
            <fullName>Not Interested</fullName>
        </value>
        <value>
            <fullName>Converted</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>